--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Displaying Rows & Columns</title>
+		<title>That Face :DD</title>
 		<link rel="stylesheet" href="style.css" />
 		<script src="script.js"></script>
 	</head>
